fix(chat): Redis ChatMemory 审查修复
- 数据结构: String → Sorted Set (增量追加, 时间排序, 滑动窗口友好)
- 原子性: saveAll 使用 Pipeline (DEL + ZADD + EXPIRE 一次性提交)
- 用户隔离: 移除全局 conversations Set, findConversationIds 改用 key SCAN
- 反序列化异常: 不再静默吞异常, 改为抛出 RuntimeException
- DTO: MessageDocument 及内部类从 class 改为 record (spec 合规)
- 配置类: RedisChatMemoryAutoConfiguration 移到 config/ 包 (spec 合规)
- spec: database-guidelines 注册 chat:memory:{conversationId} Key 模式
- 序列化: ObjectMapper copy + NON_NULL 避免存储冗余 null 字段